<resources>
    <string name="facebook_app_id" translatable="false">519741425245797</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb519741425245797</string>
    <string name="adview_banner_ad_key" translatable="false">ca-app-pub-8907881762519005/8279397503</string>
    <string name="adview_interstitial_ad_key" translatable="false">ca-app-pub-8907881762519005/3027070826</string>
    <string name="adview_reward_ad_key" translatable="false">ca-app-pub-8907881762519005/9992058134</string>
    <string name="adview_publisher_key" translatable="false">pub-8907881762519005</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="floating_button_behaviour" translatable="false">com.panaceasoft.pswallpaper.ui.dashboard.ScrollAwareFABBehavior</string>
    <string name="phone_login_phone_hint" translatable="false">+959121212121</string>
    <string name="app_name">4K/HD Wallpapers</string>
    <string name="app__app_name">4K/HD Wallpapers</string>
    <string name="app__ok">OK</string>
    <string name="app__drawer_open">Drawer Open</string>
    <string name="app__drawer_close">Drawer Close</string>
    <string name="app__cancel">Cancel</string>
    <string name="success">SUCCESS</string>
    <string name="confirm">CONFIRM</string>
    <string name="info">INFO</string>
    <string name="error">ERROR</string>
    <string name="warning">WARNING</string>
    <string name="menu__home">Home</string>
    <string name="menu__profile">Profile</string>
    <string name="menu__favourite_items">Favourite</string>
    <string name="menu__logout">Logout</string>
    <string name="menu__about_app">About Us</string>
    <string name="menu__setting">Setting</string>
    <string name="menu__privacy_app">Privacy Policy</string>
    <string name="menu__dashboard">Dashboard</string>
    <string name="menu__contact_us">Contact Us</string>
    <string name="menu__notification_setting">Notification Setting</string>
    <string name="menu__language">Language</string>
    <string name="menu__app_setting">App</string>
    <string name="menu__user_info">User Info</string>
    <string name="menu__save">Save</string>
    <string name="menu__search">Search</string>
    <string name="menu__filter">Filter</string>
    <string name="menu__category_list">Category Lists</string>
    <string name="menu__wallpaper_by_category">Wallpaper By Category</string>
    <string name="menu__latest_wallpapers">Latest Wallpapers</string>
    <string name="menu__wallpapers_list">Wallpapers List</string>
    <string name="menu__category">Category</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu__premium">Premium</string>
    <string name="menu__trending">Trending</string>
    <string name="menu__claimPoint">Claim Point</string>
    <string name="menu__trending_list">Trending List</string>
    <string name="menu__fav">Favorite</string>
    <string name="menu__fav_live_wallpaper">Favorite Live Wallpapers</string>
    <string name="menu__downloaded">Downloaded Wallpapers</string>
    <string name="menu__downloaded_live_wallpaper">Downloaded Live Wallpapers</string>
    <string name="menu__upload_photo">Upload Wallpapers</string>
    <string name="menu__fav_list">Favorite List</string>
    <string name="menu__latest_wallpaper">Latest Wallpaper</string>
    <string name="menu__latest_live_wallpaper">Latest Live Wallpaper</string>
    <string name="menu__premium_wallpapers">Premium Wallpapers</string>
    <string name="menu__gif_wallpapers">GIFs</string>
    <string name="menu__live_wallpapers">Live Wallpapers</string>
    <string name="menu__free_wallpapers">Free Wallpapers</string>
    <string name="menu__rate">Rate this app</string>
    <string name="menu__imageTypes">Wallpaper Types</string>
    <string name="menu__privacy_policy">Terms And Conditions</string>
    <string name="about_us__phone" translatable="false">Phone</string>
    <string name="about_us__facebook" translatable="false">Facebook</string>
    <string name="about_us__gplus" translatable="false">Google Plus</string>
    <string name="about_us__instagram" translatable="false">Instagram</string>
    <string name="about_us__youtube" translatable="false">Youtube</string>
    <string name="about_us__pinterest" translatable="false">Pinterest</string>
    <string name="about_us__twitter" translatable="false">Twitter</string>
    <string name="about_us__visit_website" translatable="false">Visit To Our Website</string>
    <string name="about_us__email" translatable="false">Email</string>
    <string name="favourite__favourites">Favourites</string>
    <string name="profile__title">Profile</string>
    <string name="profile__about_me">About Me</string>
    <string name="profile__joined_date">Joined Date</string>
    <string name="profile__email">Email</string>
    <string name="profile__review">Reviews</string>
    <string name="edit_profile__title">Edit Profile</string>
    <string name="edit_profile__user_name">User Name</string>
    <string name="edit_profile__about_me">About Me</string>
    <string name="edit_profile__email">Email</string>
    <string name="edit_profile__password">Password</string>
    <string name="edit_profile__password_change">Password Change</string>
    <string name="edit_profile__save">Save</string>
    <string name="register__user_name">User Name</string>
    <string name="register__email">Email</string>
    <string name="register__password">Password</string>
    <string name="register__back_to_login">Already member ? Login</string>
    <string name="register__register">Register</string>
    <string name="register__new_account">Register New User Account</string>
    <string name="register__check_option">Are you agreement this privacy and policy?</string>
    <string name="forgot_password__title">Forgot Password</string>
    <string name="forgot_password__email">Email</string>
    <string name="forgot_password__back_to_login">Already member ? Login</string>
    <string name="forgot_password__password_recovery">Password Recovery</string>
    <string name="forgot_password__save">Save</string>
    <string name="forgot_password__send">Send</string>
    <string name="password_change__password">Password</string>
    <string name="password_change__save">Save</string>
    <string name="password_change__confirm_password">Confirm Password</string>
    <string name="password_change__password_change">Password Change</string>
    <string name="login__email">Email</string>
    <string name="login__password">Password</string>
    <string name="login__not_a_member_join_now">Not a member? Join Now</string>
    <string name="login__forgot_your_password">Forgot your password ?</string>
    <string name="login__login">Login</string>
    <string name="login__welcome_title">Welcome To 4K/HD Wallpapers</string>
    <string name="login__with_google">SignIn with Google</string>
    <string name="login__with_phone">SigIn with Phone</string>
    <string name="image__default_image">Default Image</string>
    <string name="gallery__title">Gallery</string>
    <string name="gallery__image_gallery">Image Gallery</string>
    <string name="gallery__img_desc">Image Description</string>
    <string name="image_default__image">Default Image</string>
    <string name="youtube__image">YouTube Image</string>
    <string name="no_data">No Data.</string>
    <string name="search__zero">0</string>
    <string name="search_five">5</string>
    <string name="rating__min">%1$s </string>
    <string name="rating__max"> %1$s</string>
    <string name="premium__point">$ %1$s</string>
    <string name="premium__premium">Premium</string>
    <string name="contact_us__name">Contact Name</string>
    <string name="contact_us__email">Contact Email</string>
    <string name="contact_us__message">Contact Message</string>
    <string name="contact_us__phone">Contact Phone</string>
    <string name="contact_us__submit">Submit</string>
    <string name="notification__notification_setting_on_off">Notification Setting ( On/Off )</string>
    <string name="notification__latest_message_from_system">Latest Message From System</string>
    <string name="notification__notification">Notification!</string>
    <string name="notification__alert">Alert</string>
    <string name="language__english">English</string>
    <string name="language__arabic">Arabic</string>
    <string name="language__spanish">Spanish</string>
    <string name="language__language_change">Are you sure you want to change to %1$s?</string>
    <string name="language__title">Language</string>
    <string name="message__register_success">Successfully Register.</string>
    <string name="message__loading">Loading…</string>
    <string name="message__please_wait">Please wait…</string>
    <string name="message__welcome">Welcome form PSNews</string>
    <string name="message__want_to_quit">Do you really want to quit?</string>
    <string name="message__select_category">Please select the category you want to see!!!</string>
    <string name="message__ok_close">Close</string>
    <string name="message__cancel_close">Cancel</string>
    <string name="message__want_to_logout">Do you really want to logout?</string>
    <string name="message__logout">Logout</string>
    <string name="message__download_success">Successfully Downloaded.</string>
    <string name="message__downloading">Downloading file..</string>
    <string name="message__crop_image">Do you want to crop this image</string>
    <string name="error_message__select_location">Please select location.!</string>
    <string name="error_message__login_first">Please login first!</string>
    <string name="error_message__youtube_not_valid">YouTube is not valid.</string>
    <string name="error_message__blank_email">Please input Email.</string>
    <string name="error_message__blank_contact_message">Please input Contact Message.</string>
    <string name="error_message__blank_password">Please input password.</string>
    <string name="error_message__blank_name">Please input name.</string>
    <string name="error_message__blank_keyword">Please input search keyword.</string>
    <string name="error_message__password_not_equal">Password are not equal!</string>
    <string name="error_message__no_internet">No internet connection.</string>
    <string name="error_message__img_not_selected">No Image Selected</string>
    <string name="error_message__image_cannot_upload">Image cannot be Uploaded</string>
    <string name="error_message__required_fields">Required Fields cannot be blank</string>
    <string name="error_message__to_check_agreement">You need to check an agreement of privacy and policy.</string>
    <string name="error_message__blank_phone_no">Please input the phone number.</string>
    <string name="confirm_message__set_wallpaper">Confirm to set Wallpaper</string>
    <string name="confirm_message__ok">OK</string>
    <string name="confirm_message__cancel">Cancel</string>
    <string name="success_message__set_wallpaper">Successfully set wallpaper</string>
    <string name="success_message__upload_successful">Uploaded Successfully</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard__title">Find Wallpaper</string>
    <string name="dashboard__search">Search Wallpaper</string>
    <string name="dashboard__premium_recommended">Recommended</string>
    <string name="dashboard__premium_download">Most Download</string>
    <string name="dashboard__wallpaper_latest">Latest</string>
    <string name="dashboard__wallpaper_trending">Trending</string>
    <string name="dbs__setWallpaperTo">Set Wallpaper To</string>
    <string name="dbs__setWallpaperToHome">Home Screen</string>
    <string name="dbs__setWallpaperToLock">Lock Screen</string>
    <string name="dbs__setWallpaperToBoth">Home and Lock Screen</string>
</resources>