<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/customAlertTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_amber_900"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/customAlertIconImageView"
            android:layout_width="@dimen/space_52"
            android:layout_height="@dimen/space_52"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_16"
            android:contentDescription="@string/image__default_image"
            android:tint="@color/md_white_1000"
            app:srcCompat="@drawable/baseline_set_as_red_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_16"
            android:text="@string/dbs__setWallpaperTo"
            android:textAlignment="center"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/font_title_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/homeScreenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_16"
            android:layout_weight="1"
            android:background="@color/md_grey_800"
            android:text="@string/dbs__setWallpaperToHome"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/font_body_size" />

        <Button
            android:id="@+id/lockScreenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_16"
            android:layout_weight="1"
            android:background="@color/md_grey_800"
            android:text="@string/dbs__setWallpaperToLock"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/font_body_size" />

        <Button
            android:id="@+id/homeAndLockScreenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_16"
            android:layout_weight="1"
            android:background="@color/md_grey_800"
            android:text="@string/dbs__setWallpaperToBoth"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/font_body_size" />

    </LinearLayout>

</LinearLayout>