<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="false">


            <ImageView
                android:id="@+id/bgImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/image__default_image"
                android:scaleType="centerCrop"
                tools:src="@drawable/wallpaper_login_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


            <View
                android:id="@+id/roundedCornerRectangleView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_corner_shape_button"
                android:backgroundTint="@color/md_white_1000"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                app:layout_constraintDimensionRatio="1:0.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.493" />

            <TextView
                android:id="@+id/loginTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_password__password_recovery"
                android:textStyle="bold"
                app:font='@{"normal"}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/roundedCornerRectangleView"
                app:textSize='@{"font_title_size"}'
                tools:text="@string/forgot_password__password_recovery" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="@+id/roundedCornerRectangleView"
                app:layout_constraintStart_toStartOf="@+id/roundedCornerRectangleView"
                app:layout_constraintTop_toBottomOf="@+id/loginTextview">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_40"
                    android:hint="@string/forgot_password__email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:isScrollContainer="true"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/text__primary"
                    app:textSize='@{"edit_text"}' />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/forgotPasswordButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_corner_shape_button"
                android:text="@string/forgot_password__send"
                android:textColor="@color/button__primary_text"
                app:font='@{"normal"}'
                app:layout_constraintBottom_toBottomOf="@+id/roundedCornerRectangleView"
                app:layout_constraintEnd_toEndOf="@+id/roundedCornerRectangleView"
                app:layout_constraintStart_toStartOf="@+id/roundedCornerRectangleView"
                app:layout_constraintTop_toBottomOf="@+id/emailTextInput"
                tools:text="@string/forgot_password__send" />

            <Button
                android:id="@+id/loginButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:text="@string/forgot_password__back_to_login"
                android:textAllCaps="false"
                android:textColor="@color/text__secondary"
                app:font='@{"normal"}'
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:textSize='@{"button_text"}'
                tools:text="@string/forgot_password__back_to_login" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
